# ccsdspy

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.md  README.rst  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  readthedocs.yml  requirements.txt  run_coverage.sh  search.html  searchindex.js  setup.cfg  setup.py
.github/: copilot-instructions.md
.github/workflows/: ccsdspy-ci.yml  doc-build.yml
_modules/: index.html
_modules/ccsdspy/: _astropy_init.html  interface.html
_sources/: index.rst.txt  quickstart.rst.txt
_sources/api/: ccsdspy.FixedLength.rst.txt  ccsdspy.PacketField.rst.txt  ccsdspy.test.rst.txt
_sources/ccsdspy/: index.rst.txt
api/: ccsdspy.FixedLength.html  ccsdspy.PacketField.html  ccsdspy.test.html
ccsdspy/: __init__.py  __main__.py  config.py  constants.py  converters.py  decode.py  encode.py  exceptions.py  index.html  interface.py  logger.py  packet_fields.py  packet_types.py  quickstart.html  utils.py
ccsdspy/data/: config.yml
ccsdspy/example_subpkg/: setup_package.py
ccsdspy/tests/: test_byte_order.py  test_config.py  test_converters.py  test_encode_byte_order.py  test_hs.py  test_interface.py  test_logger.py  test_packet_fields.py  test_packet_types.py  test_primary_header.py  test_regression.py  test_split.py  test_utils.py  test_var_length.py
ccsdspy/tests/data/byte_order/: byte_order_packets.py  byteorder_1.csv  byteorder_12.csv  byteorder_123.csv  byteorder_1234.csv  byteorder_123456.csv  byteorder_1234567.csv  byteorder_12345678.csv  byteorder_21.csv  byteorder_2143.csv  byteorder_321.csv  byteorder_3412.csv  byteorder_4321.csv  byteorder_78563412.csv  byteorder_87654321.csv
ccsdspy/tests/data/europa_clipper/: apid01216.tlm  apid01219.tlm  apid01223.tlm  apid01227.tlm  apid01232.tlm
ccsdspy/tests/data/hs/: README.rst
ccsdspy/tests/data/hs/apid001/: SSAT1_2015-180-00-00-00_2015-180-01-59-58_1_1_sim.cvt.csv
ccsdspy/tests/data/hs/apid010/: SSAT1_2015-180-00-00-00_2015-180-00-59-59_10_1_sim.cvt.csv  SSAT1_2015-180-00-00-00_2015-180-00-59-59_10_1_sim.tlm  defs.csv
ccsdspy/tests/data/hs/apid035/: SSAT1_2015-180-00-00-00_2015-180-01-59-59_35_1_sim.cvt.csv  SSAT1_2015-180-00-00-00_2015-180-01-59-59_35_1_sim.tlm  defs.csv
ccsdspy/tests/data/hs/apid130/: SSAT1_2015-180-00-00-00_2015-180-01-59-35_130_1_sim.cvt.csv  SSAT1_2015-180-00-00-00_2015-180-01-59-35_130_1_sim.tlm  defs.csv
ccsdspy/tests/data/hs/apid251/: SSAT1_2015-180-00-00-00_2015-180-01-59-59_251_1_sim.cvt.csv  SSAT1_2015-180-00-00-00_2015-180-01-59-59_251_1_sim.tlm  defs.csv
ccsdspy/tests/data/hs/apid895/: SSAT1_2015-180-00-00-00_2015-180-01-59-56_895_1_sim.tlm  defs.csv
ccsdspy/tests/data/hs/attic/: SSAT_Mnemonics.csv  _expand_mnemnonics.py  expand_mnemnonics.py
ccsdspy/tests/data/packet_def/: basic_csv_3col_with_all.csv  basic_csv_3col_with_expand.csv  basic_csv_3col_with_reference.csv  extended_csv_4col.csv  extended_csv_4col_with_array.csv  simple_csv_3col.csv  simple_csv_3col_with_array.csv
ccsdspy/tests/data/split/: CYGNSS_F7_L0_2022_086_10_15_V01_F__first100pkts.tlm  apid00384.tlm  apid00386.tlm  apid00391.tlm  apid00392.tlm  apid00393.tlm  apid00394.tlm  apid01313.tlm
ccsdspy/tests/data/split/defs/: Conventions.csv  DIAG_ADCS_BUS_FSW_INP.csv  DIAG_ADCS_BUS_FSW_OUT.csv  DIAG_ADCS_BUS_FSW_TLM.csv  DIAG_DDMI_ACK.csv  DIAG_DDMI_AD_RESP.csv  DIAG_DDMI_BOOTLOADER_AUTOLOAD.csv  DIAG_DDMI_BOOTLOADER_ERASEFLASH.csv  DIAG_DDMI_BOOTLOADER_MEM_DUMP.csv  DIAG_DDMI_BOOTLOADER_MEM_LOAD.csv  DIAG_DDMI_CHAN_PWR.csv  DIAG_DDMI_CHAN_TRACK_STAT.csv  DIAG_DDMI_COMM_DIAG.csv  DIAG_DDMI_CYGNSS_PKT.csv  DIAG_DDMI_DATA_LOGGER_STAT.csv  DIAG_DDMI_FRONT_END_STAT.csv  DIAG_DDMI_NAV_INFO.csv  DIAG_DDMI_OP_SETTINGS.csv  DIAG_DDMI_ORBITAL_ELEMENTS.csv  DIAG_DDMI_PPS_TABLE.csv  DIAG_DDMI_PROCESSED_DATA.csv  DIAG_DDMI_PVT_INFO.csv  DIAG_DDMI_RAW_DATA.csv  DIAG_DDMI_REFL_CHAN_STAT.csv  DIAG_DDMI_REFL_LIST.csv  DIAG_DDMI_REFL_STAT.csv  DIAG_DDMI_SPW_DDM.csv  DIAG_DDMI_SPW_DDM_TH.csv  DIAG_DDMI_STATUS.csv  DIAG_DDMI_STREAM_ROUTER_STAT.csv  DIAG_ECHO.csv  DIAG_MAG_RAW.csv  DIAG_NST_RAW.csv  DIAG_RWA_RAW.csv  ENG_ADCS.csv  ENG_ADCSIO.csv  ENG_BOOT.csv  ENG_DDMI.csv  ENG_DNLD.csv  ENG_DNLD_FAT.csv  (+21 more)
ccsdspy/tests/data/var_length/: README.md  var_length_packets.py  var_length_packets_double_varfield.py
docs/: Makefile  api.rst  ccsds.rst  ccsdspy.rst  conf.py  index.rst  make.bat  whatsnew.rst
docs/_static/used-by/: resize.sh
docs/_templates/: github.html  logo.html  navigation.html
docs/ccsdspy/: index.rst
docs/dev-guide/: index.rst
docs/spac-kit/: autodocs.rst  generator.rst  index.rst  installation.rst  parser.rst  plugins.rst
docs/user-guide/: ccsds.rst  converters.rst  customization.rst  fixedlength.rst  index.rst  loadfile.rst  logging.rst  packetfields.rst  synthetic.rst  utils.rst  variablelength.rst
docs/whatsnew/: index.rst
licenses/: ASTROPY.rst
