[tool.poetry]
name = "ccsdpy"
version = "0.0.15dev"
description = "IO Interface for Reading CCSDS Data in Python."
authors = ["Daniel da Silva <mail@danieldasilva.org>"]
readme = "README.rst"
packages = [{include = "ccsdspy"}]
license = "BSD-3"
homepage = "https://ccsdspy.readthedocs.io/en/latest/"
repository = "https://github.com/ddasilva/ccsdspy/"
documentation = "https://ccsdspy.readthedocs.io/en/latest/"

keywords = ["python", "ccsds", "space packet protocol"]

classifiers = [
    "Development Status :: 5 - Production/Stable  ",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.6, <=3.10"    # see https://github.com/python-poetry/poetry/issues/4316
numpy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
coverage = "^6.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^5.2.3"
sphinx-automodapi = "^0.14.1"
graphviz = "^0.20.1"


[tool.poetry.urls]
Issues = "https://github.com/ddasilva/ccsdspy/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
minversion = 3.0
testpaths = ["ccsdspy", "docs"]
norecursedirs = ["build", "docs/_build", "docs/generated", "*.egg-info"]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-modules"
filterwarnings = [
     # This is due to dependencies building with a numpy version different from
     # the local installed numpy version, but should be fine
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     "ignore:numpy.ufunc size changed:RuntimeWarning",
     "ignore:numpy.ndarray size changed:RuntimeWarning",
     # See https://github.com/astropy/extension-helpers/issues/23
     "ignore:Distutils was imported before Setuptools"
]

[tool.black]
line_length = 100

[tool.coverage.run]
omit = [
  "ccsdspy/conftest.py",
  "ccsdspy/*setup_package*",
  "ccsdspy/tests/*",
  "ccsdspy/*/tests/*",
  "ccsdspy/extern/*",
  "ccsdspy/version*",
  "*/ccsdspy/*setup_package*",
  "*/ccsdspy/tests/*",
  "*/ccsdspy/*/tests/*",
]

[tool.coverage.html]
directory = "coverage"

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]