[build-system]
requires = ["setuptools>=45",
            "setuptools_scm[toml]>=6.2",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "ccsdspy"
description = "IO Interface for Reading CCSDS Data in Python."
readme = "README.rst"
dynamic = ["version"]
authors = [{name = "Daniel da Silva", email="mail@danieldasilva.org"},
           {name = "Steven Christe", email="steven.d.christe@nasa.gov"},
]
license = {file = "LICENSE.rst"}
requires-python = ">=3.6"
keywords = ["python", "nasa", "ccsds", "space packet protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Science/Research",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
]
dependencies = [
  'numpy>=1.8.0',
]

[project.optional-dependencies]
dev = [
  'coverage>=6.5.0',
  'pytest>=7.1.3',
  'pytest-astropy',
  'pytest-cov',
  'black>=22.10.0',
  'flake8>=5.0.4',
  'coverage[toml]'
]

docs = [
  'sphinx>=5.2.3',
  'sphinx-automodapi>=0.14.1',
  'graphviz>=0.20.1',
  'numpydoc',
]

[tool.setuptools.package-data]
"ccsdspy.data" = ["**"]

[tool.setuptools]
packages = ["ccsdspy"]

[tool.setuptools_scm]
write_to = "ccsdspy/_version.py"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["ccsdspy/tests", "docs"]
norecursedirs = ["build", "docs/_build", "docs/generated", "*.egg-info"]
doctest_plus = "enabled"
text_file_format = "rst"
addopts = "--doctest-modules"
collect_ignore_glob= ['_*.py']
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  # This is due to dependencies building with a numpy version different from
  # the local installed numpy version, but should be fine
  # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
  "ignore:numpy.ufunc size changed:RuntimeWarning",
  "ignore:numpy.ndarray size changed:RuntimeWarning",
  # See https://github.com/astropy/extension-helpers/issues/23
  "ignore:Distutils was imported before Setuptools"
]


[tool.coverage.run]
omit = [
  'ccsdspy/__init*',
  'ccsdspy/conftest.py',
  'ccsdspy/*setup_package*',
  'ccsdspy/tests/*',
  'ccsdspy/*/tests/*',
  'ccsdspy/extern/*',
  'ccsdspy/_version*',
  '*/ccsdspy/__init*',
  '*/ccsdspy/conftest.py',
  '*/ccsdspy/*setup_package*',
  '*/ccsdspy/tests/*',
  '*/ccsdspy/*/tests/*',
  '*/ccsdspy/extern/*',
  '*/ccsdspy/version*',
]

[tool.black]
line_length = 100
extend-exclude = '''
/(
    _version.py
)/
'''
